--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ header {
     font-size: 6vh;
     text-align: center;
     justify-content: center;
+    background-color: rgb(189, 189, 189);
 }
 
 body {
@@ -23,13 +24,14 @@ body {
     list-style: none;
     display: flex;
     flex-direction: row;
-    background-color: rgb(228, 228, 228);
+    background-color: rgb(189, 189, 189);
     border-width: 1px;
-    border-color: rgb(224, 64, 251);
+    border-color: #BDBDBD;
     margin: 0;
     padding: 0;
     padding-right: 5%;
     padding-left: 5%;
+
 }
 
 .menu-text {
@@ -51,9 +53,10 @@ body {
     width: 90%;
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(224, 64, 251);
+    border-color: #BDBDBD;
     margin-top: 1%;
     margin-bottom: 1%;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.10), 0 2px 4px rgba(0,0,0,0.20);
 }
 
 .index-link,
@@ -64,9 +67,13 @@ body {
     flex: 1 1 auto;
     border-width: 1px;
     border-style: solid;
-    border-color: rgb(224, 64, 251);
+    justify-content: center;
+    text-align: center;
+    background-color: #9C27B0;
+    border-color: #BDBDBD;
     padding: 0;
     margin: 0;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.10), 0 2px 4px rgba(0,0,0,0.20);
 }
 
 .index-footer-container {
@@ -82,18 +89,51 @@ body {
     background-color: rgb(245, 245, 245);
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(224, 64, 251);
+    border-color: #BDBDBD;
     width: 90%;
     min-height: 5%;
     margin-bottom: 2%;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.10), 0 2px 4px rgba(0,0,0,0.20);
 }
 
-.footer-content {}
+.footer-content {
+	text-align: center;
+}
 
 a {
     text-decoration: none;
     color: inherit;
+    align-self: center;
+    width: 100%;
+    height: 100%;
 }
+
+.index-link:hover,
+.bio-link:hover,
+.contact-link:hover,
+.cv-link:hover
+ {
+	animation: changecolour 2s linear infinite;
+}
+
+@keyframes changecolour {
+	0% {background-color: #9C27B0}
+	50% {background-color: #7B1FA2}
+	100% {background-color: #9C27B0}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 600px) {
     .nav {
@@ -102,7 +142,7 @@ a {
         flex-direction: column;
         background-color: rgb(228, 228, 228);
         border-width: 1px;
-        border-color: rgb(224, 64, 251);
+        border-color: #BDBDBD;
         margin: 0;
         padding: 0;
         padding-right: 5%;
