--- a/css/styles.css
+++ b/css/styles.css
@@ -26,21 +26,23 @@ body {
     flex-direction: row;
     background-color: rgb(189, 189, 189);
     border-width: 1px;
-    border-color: #BDBDBD;
+    border-color: rgb(189, 189, 189);
     margin: 0;
     padding: 0;
     padding-right: 5%;
     padding-left: 5%;
-
 }
 
-.menu-text {
+.menu-text,
+.contact-me-text {
     font-family: 'Lato', sans-serif;
-    font-size: 30px;
+    font-size: 4vh;
     color: #212121;
+    text-align: center;
 }
 
-.index-main-container {
+.index-main-container,
+.contact-main-container {
     display: flex;
     flex: 1 1 auto;
     background-color: rgb(189, 189, 189);
@@ -56,7 +58,19 @@ body {
     border-color: #BDBDBD;
     margin-top: 1%;
     margin-bottom: 1%;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.10), 0 2px 4px rgba(0,0,0,0.20);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.10), 0 2px 4px rgba(0, 0, 0, 0.20);
+}
+
+.contact-main {
+    display: inline-flex;
+    background-color: rgb(245, 245, 245);
+    width: 90%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #BDBDBD;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.10), 0 2px 4px rgba(0, 0, 0, 0.20);
 }
 
 .index-link,
@@ -70,15 +84,15 @@ body {
     justify-content: center;
     text-align: center;
     background-color: #9C27B0;
-    border-color: #BDBDBD;
+    border-color: rgb(189, 189, 189);
     padding: 0;
     margin: 0;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.10), 0 2px 4px rgba(0,0,0,0.20);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.10), 0 2px 4px rgba(0, 0, 0, 0.20);
 }
 
-.index-footer-container {
+.footer-container {
     display: flex;
-    flex: 0.1 1 auto;
+    flex: 0 1 auto;
     background-color: rgb(189, 189, 189);
     justify-content: center;
     flex-direction: row;
@@ -91,13 +105,12 @@ body {
     border-width: 1px;
     border-color: #BDBDBD;
     width: 90%;
-    min-height: 5%;
-    margin-bottom: 2%;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.10), 0 2px 4px rgba(0,0,0,0.20);
+    height: 90%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.10), 0 2px 4px rgba(0, 0, 0, 0.20);
 }
 
 .footer-content {
-	text-align: center;
+    text-align: center;
 }
 
 a {
@@ -111,38 +124,64 @@ a {
 .index-link:hover,
 .bio-link:hover,
 .contact-link:hover,
-.cv-link:hover
- {
-	animation: changecolour 2s linear infinite;
+.cv-link:hover,
+#submitbutton:hover {
+    animation: changecolour 2s linear infinite;
 }
 
 @keyframes changecolour {
-	0% {background-color: #9C27B0}
-	50% {background-color: #7B1FA2}
-	100% {background-color: #9C27B0}
+    0% {
+        background-color: #9C27B0
+    }
+    50% {
+        background-color: #7B1FA2
+    }
+    100% {
+        background-color: #9C27B0
+    }
 }
 
+#submitbutton {
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    background: #9C27B0;
+    color: #212121;
+    margin: 0 0 5px;
+    padding: 10px;
+    font-size: 15px;
+}
 
+#contact-form input[type="text"],
+#contact-form textarea {
+    width: 90%;
+    border: 1px solid #CCC;
+    background: #FFF;
+    margin: 0 0 5px;
+    padding: 10px;
+}
 
+textarea {
+    height: 100px;
+    max-width: 90%;
+    resize: none;
+}
 
-
-
-
-
-
-
-
-
-
+.form-container {
+    max-width: 70%;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+}
 
 @media (max-width: 600px) {
     .nav {
         list-style: none;
         display: flex;
         flex-direction: column;
-        background-color: rgb(228, 228, 228);
+        background-color: rgb(189, 189, 189);
         border-width: 1px;
-        border-color: #BDBDBD;
+        border-color: rgb(189, 189, 189);
         margin: 0;
         padding: 0;
         padding-right: 5%;
@@ -155,17 +194,10 @@ a {
     }
 }
 
-.email-box {
-    height: 30vh;
-    width: 80vw;
-}
-
-.get-email {
-    height: 2vh;
-    width: 80vw;
-}
-
-.contact-main {
-    display: inline-flex;
-    justify-content: center;
+fieldset {
+    border: medium none !important;
+    margin: 0 0 10px;
+    min-width: 100%;
+    padding: 0;
+    width: 100%;
 }
