--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,14 @@ textarea {
     resize: none;
 }
 
+fieldset {
+    border: none;
+    margin: 0 0 10px;
+    min-width: 100%;
+    padding: 0;
+    width: 100%;
+}
+
 .form-container {
     max-width: 70%;
     width: 100%;
@@ -192,12 +200,4 @@ textarea {
         font-size: 24px;
         color: #212121;
     }
-}
-
-fieldset {
-    border: medium none !important;
-    margin: 0 0 10px;
-    min-width: 100%;
-    padding: 0;
-    width: 100%;
 }
