--- a/css/styles.css
+++ b/css/styles.css
@@ -142,8 +142,7 @@ a {
 }
 
 #submitbutton {
-    cursor: pointer;
-    width: 100%;
+    width: 30%;
     border: none;
     background: #9C27B0;
     color: #212121;
@@ -200,4 +199,7 @@ fieldset {
         font-size: 24px;
         color: #212121;
     }
+
+    #submitbutton {
+    width: 100%;
 }
