--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ body {
     padding: 0;
     margin: 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.10), 0 2px 4px rgba(0, 0, 0, 0.20);
+
 }
 
 .footer-container {
@@ -124,7 +125,7 @@ body {
     flex-direction: row;
 }
 
-.footer {
+.footer-content {
     display: inline-flex;
     background-color: rgb(245, 245, 245);
     border-style: solid;
@@ -133,10 +134,35 @@ body {
     width: 90%;
     height: 90%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.10), 0 2px 4px rgba(0, 0, 0, 0.20);
+    justify-content: center;
+
 }
 
-.footer-content {
-    text-align: center;
+ .footer-list {
+    list-style: none;
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+    padding-right: 5%;
+    padding-left: 5%;
+
+ }
+
+.footer-item {
+    display: flex;
+
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: green;
+    margin: auto;
+}
+
+#footer-item {
+    display: inline-flex;
+    flex: 0 0 auto;
 }
 
 a {
