--- a/css/styles.css
+++ b/css/styles.css
@@ -373,9 +373,12 @@ fieldset {
     .Recent-Work {
         text-overflow: ellipsis;
         margin-left: 5%;
+        margin-right: 5%;
     }
     .Introduction {
         text-overflow: ellipsis;
+        margin-right: 5%;
+        margin-left: 5%;
     }
     .AboutMe-Text {
         text-overflow: ellipsis;
