--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,6 @@ h1 {
 .MainImg {
     flex: 1 0 auto;
     width: 10%;
-    background-color: blue;
 }
 
 .me-picture {
@@ -113,6 +112,7 @@ h1 {
 .AboutMe-Text {
     font-size: 2em;
     text-align: center;
+    text-overflow: clip;
 }
 
 .cv-main {
@@ -324,7 +324,7 @@ fieldset {
 }
 
 @media (max-width: 600px) {
-    .index-main-container,
+
     .bio-main-container,
     .cv-main-container,
     .contact-main-container {
@@ -355,11 +355,13 @@ fieldset {
     }
     .MainImg {
         flex: 1 1 auto;
+        max-height: 100%;
         width: 200%;
     }
     .me-picture {
         width: 200%;
-        height: 100%;
+        height: 99%;
+        margin-left: 20%;
     }
     .cv-main {
         flex-direction: column;
@@ -368,20 +370,20 @@ fieldset {
     .Projects {
         margin-left: 5%;
         margin-right: 5%;
-        text-overflow: ellipsis;
+        text-overflow: clip;
     }
     .Recent-Work {
-        text-overflow: ellipsis;
+        text-overflow: clip;
         margin-left: 5%;
         margin-right: 5%;
     }
     .Introduction {
-        text-overflow: ellipsis;
+        text-overflow: clip;
         margin-right: 5%;
         margin-left: 5%;
     }
     .AboutMe-Text {
-        text-overflow: ellipsis;
+        text-overflow:clip;
         font-size: 1.5em;
     }
     .AboutMe-Header {
@@ -402,3 +404,4 @@ fieldset {
         font-family: 'Yanone Kaffeesatz', sans-serif;
         text-align: center;
     }
+}
