--- a/css/styles.css
+++ b/css/styles.css
@@ -296,7 +296,7 @@ a {
     border-color: #BDBDBD;
     color: #212121;
     font-family: 'Lato', sans-serif;
-    font-size: 24px;
+    font-size: 1em;
     background: #FFFFFF;
     margin: 0 0 5px;
     padding: 10px;
@@ -348,7 +348,7 @@ fieldset {
         color: #212121;
     }
     #submitbutton {
-        width: 200px;
+        width: 80%;
     }
     .Index-Main-Text {
         visibility: hidden;
