--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
 .menu-text,
 .contact-me-text {
     font-family: 'Lato', sans-serif;
-    font-size: 4vh;
+    font-size: 200%;
     color: #212121;
     text-align: center;
 }
@@ -85,10 +85,6 @@ body {
     height: 100%;
 }
 
-.Mobile-Heading {
-    visibility: hidden;
-}
-
 .bio-main {
     display: flex;
     background-color: rgb(245, 245, 245);
@@ -126,7 +122,7 @@ body {
 
 .Introduction {
     display: flex;
-    flex: 1 1 auto;
+    width: 30%;
     background-color: rgb(255, 255, 255);
     font-family: 'Yanone Kaffeesatz', sans-serif;
     margin-left: 5%;
@@ -137,7 +133,7 @@ body {
 
 .Projects {
     display: flex;
-    flex: 1 1 auto;
+    width: 30%;
     background-color: rgb(255, 255, 255);
     font-family: 'Yanone Kaffeesatz', sans-serif;
     margin-top: 1%;
@@ -151,7 +147,7 @@ body {
 
 .Recent-Work {
     display: flex;
-    flex: 1 1 auto;
+    width: 30%;
     background-color: rgb(255, 255, 255);
     font-family: 'Yanone Kaffeesatz', sans-serif;
     margin-top: 1%;
@@ -163,7 +159,7 @@ body {
 .Introduction-Header,
 .Projects-Header,
 .Recent-Work-Header {
-    font-size: 4em;
+    font-size: 225%;
     text-align: center;
     font-family: 'Yanone Kaffeesatz', sans-serif;
 }
@@ -222,6 +218,7 @@ body {
     border-color: #BDBDBD;
     width: 90%;
     height: 90%;
+    padding-top: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.10), 0 2px 4px rgba(0, 0, 0, 0.20);
     justify-content: center;
 }
@@ -292,7 +289,6 @@ a {
     40% {
         width: 0%;
     }
-
     50% {
         width: 50%;
     }
@@ -401,20 +397,38 @@ fieldset {
         flex-direction: column;
         overflow: auto;
     }
+    .Introduction {
+        display: flex;
+        width: 90%;
+        background-color: rgb(255, 255, 255);
+        font-family: 'Yanone Kaffeesatz', sans-serif;
+        text-overflow: clip;
+        margin-right: 5%;
+        margin-left: 5%;
+        flex-direction: column;
+    }
     .Projects {
+        display: flex;
+        flex: 1 1 auto;
+        width: 85%;
+        background-color: rgb(255, 255, 255);
+        font-family: 'Yanone Kaffeesatz', sans-serif;
         margin-left: 5%;
         margin-right: 5%;
         text-overflow: clip;
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+        flex-direction: column;
     }
     .Recent-Work {
+        display: flex;
+        width: 90%;
+        background-color: rgb(255, 255, 255);
+        font-family: 'Yanone Kaffeesatz', sans-serif;
         text-overflow: clip;
         margin-left: 5%;
         margin-right: 5%;
-    }
-    .Introduction {
-        text-overflow: clip;
-        margin-right: 5%;
-        margin-left: 5%;
+        flex-direction: column;
     }
     .AboutMe-Text {
         text-overflow: clip;
