--- a/css/styles.css
+++ b/css/styles.css
@@ -453,3 +453,48 @@ fieldset {
         text-align: center;
     }
 }
+
+@media (max-width: 1100px) {
+    .cv-main {
+        flex-direction: column;
+        overflow: auto;
+    }
+    .bio-main-container,
+    .cv-main-container,
+    .contact-main-container {
+        overflow: auto;
+    }
+    .Introduction {
+        display: flex;
+        width: 90%;
+        background-color: rgb(255, 255, 255);
+        font-family: 'Yanone Kaffeesatz', sans-serif;
+        text-overflow: clip;
+        margin-right: 5%;
+        margin-left: 5%;
+        flex-direction: column;
+    }
+    .Projects {
+        display: flex;
+        flex: 1 1 auto;
+        width: 85%;
+        background-color: rgb(255, 255, 255);
+        font-family: 'Yanone Kaffeesatz', sans-serif;
+        margin-left: 5%;
+        margin-right: 5%;
+        text-overflow: clip;
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+        flex-direction: column;
+    }
+    .Recent-Work {
+        display: flex;
+        width: 90%;
+        background-color: rgb(255, 255, 255);
+        font-family: 'Yanone Kaffeesatz', sans-serif;
+        text-overflow: clip;
+        margin-left: 5%;
+        margin-right: 5%;
+        flex-direction: column;
+    }
+}
